##Text encoding: utf-8

2003-07-02 Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* configure.ac: changed version to 0.1.6
	* chem3d/gtkchem3dViewer.cc: added bgcolor property
	* chem3d/bonobo-control.cc: added bgcolor property

2003-06-30 Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* chemistry/elements.cc (GetRadius): added missing return statement

2003-06-29 Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* tests/nickel.gcrystal: updated to 0.5.2 format
	* chemistry/elements.cc, chemistry/xml-utils.cc: fixed several
	bugs related to the use of the radii database
	* crystalviewer/crystalatom.cc: wrote a sensible SetRadius method

2003-06-28 Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* element.cc: a bug fixed in the database loading
	* gtkchem3dviewer.cc: change the coordinates system to get with
	gchem3d and mozilla-bonobo something more similar to chime
	* crystalatom.h: add const to argument of SetRadius
	
2003-06-27 Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* Updated GtkChem3D dependencies to OpenBabel-0.100.1

2003-06-16 Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* Change atoms radii in crystal from double to GcuCrystalRadius

2003-06-12 Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* Added a PropertyBag to the Chem3D Bonobo Control
	* New program test for the Bonobo Control
	
2003-06-02 Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* Implemented functions to retrieve electronegativities and radii
	* Fixed an error in elements.xml.in
	
2003-05-30 Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* Added GtkChem3DViewer widget along with a Bonobo control using it
	* Added atomic radii and electronegativities to elements.xml.in
	
2003-03-25	Pav Lucistnik <pav@oook.cz>
	* Fixed compilation problems with gcc-2.95.x
		
2003-02-22	Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* Changed constructor for CrystalAtom: deleted color and radius parameters making new versions incompatible with gcrystal-0.5.0
	* Use default colors for atoms when none is given
	* Fixed a bug in Bond::GetAtom(Atom)